# python-scriptmerge

./: .gitignore  README.md  README.rst  cspell.json  makefile  pyproject.toml  test-requirements.txt  tox.ini
.github/workflows/: tests.yml
scriptmerge/: __init__.py  main.py  merge1.py  merge2.py  merge_common.py  merge_py.py  merge_pyz.py
stickytape/: __init__.py  main.py
test_scripts/circular_reference/: hello
test_scripts/explicit_relative_import/: hello
test_scripts/explicit_relative_import_in_init/: hello
test_scripts/implicit_init_import/: hello
test_scripts/import_from_as_module/: hello
test_scripts/import_from_as_value/: hello
test_scripts/imports_in_imported_modules/: hello
test_scripts/script_import_class/: hello
test_scripts/script_import_class/greetings/: greeting.py
test_scripts/script_using_from_to_import_module/: hello
test_scripts/script_using_from_to_import_multiple_modules/: hello
test_scripts/script_using_from_to_import_multiple_values/: hello
test_scripts/script_using_multi_import/: hello
test_scripts/script_using_multi_import/greetings/: greeting.py  neglect.py
test_scripts/script_using_stdlib_module_in_package/: hello
test_scripts/script_with_dynamic_import/: hello
test_scripts/script_with_single_local_from_import/: hello
test_scripts/script_with_single_local_import/: hello
tests/: conftest.py  test_clean.py  test_cli.py  test_environment.py  test_excludes.py  test_regex.py  test_stickytape.py
tests/test_ver1/: conftest.py  test_cb.py  test_check_scriptmerge.py  test_clean.py  test_cli_input.py  test_excludes.py  test_init_py.py  test_scriptmerge.py
tests/test_ver2/: conftest.py  test_cb.py  test_check_scriptmerge.py  test_cli_input.py  test_excludes.py  test_scriptmerge.py
