[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[project]
name = "stickytape"
version = "0.2.1"
description = "Convert Python packages into a single script"
keywords = ["stickytape"]
license = {text = "BSD-2-Clause License"}
dynamic = ["readme"]
requires-python = ">=3.7"
authors = [
  {email = "mike@zwobble.org"},
  {name = "Michael Williamson"},
  {email = "bigbytetech@gmail.com"},
  {name = ":Barry-Thomas-Paul: Moss"}
]

[project.urls]
homepage = "https://github.com/Amourspirit/stickytape"
documentation = "https://github.com/Amourspirit/stickytape"
repository = "https://github.com/Amourspirit/stickytape"


[project.scripts]
stickytape = "stickytape.main:main"

[tool.setuptools]
packages = ["stickytape"]
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}
